<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">


    <GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:rowCount="5"
        android:columnCount="3">

        <Button
            android:id="@+id/btnStart"
            android:layout_width="70dp"
            android:layout_height="69dp"
            android:layout_gravity="center"
            android:text="@string/btnStart"
            android:textAllCaps="false"
            android:layout_row="0"
            android:layout_column="1"
            android:onClick="start"/>

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn1"
            android:layout_column="0"
            android:layout_row="1"
            android:onClick="pulsarBtn"
            android:tag="1"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn2"
            android:layout_row="1"
            android:layout_column="1"
            android:onClick="pulsarBtn"
            android:tag="2"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn3"
            android:layout_row="1"
            android:layout_column="2"
            android:onClick="pulsarBtn"
            android:tag="3"/>

        <Button
            android:id="@+id/btn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn4"
            android:layout_row="2"
            android:layout_column="0"
            android:onClick="pulsarBtn"
            android:tag="4"/>

        <Button
            android:id="@+id/btn5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn5"
            android:layout_row="2"
            android:layout_column="1"
            android:onClick="pulsarBtn"
            android:tag="5"/>

        <Button
            android:id="@+id/btn6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn6"
            android:layout_row="2"
            android:layout_column="2"
            android:onClick="pulsarBtn"
            android:tag="6"/>

        <Button
            android:id="@+id/btn7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn7"
            android:layout_row="3"
            android:layout_column="0"
            android:onClick="pulsarBtn"
            android:tag="7"/>

        <Button
            android:id="@+id/btn8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn8"
            android:layout_row="3"
            android:layout_column="1"
            android:onClick="pulsarBtn"
            android:tag="8"/>

        <Button
            android:id="@+id/btn9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn9"
            android:layout_row="3"
            android:layout_column="2"
            android:onClick="pulsarBtn"
            android:tag="9"/>

        <Button
            android:id="@+id/btn0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn0"
            android:layout_row="4"
            android:layout_column="1"
            android:onClick="pulsarBtn"
            android:tag="0"/>
    </GridLayout>

</LinearLayout>